--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "better-sqlite3": "^5.4.3",
+    "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
@@ -32,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:4000"
 }
