--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "better-sqlite3": "^5.4.3",
     "bootstrap": "^4.3.1",
+    "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
@@ -19,6 +20,9 @@
     "reactstrap": "^8.0.1"
   },
   "scripts": {
+    "client": "yarn start",
+    "server": "nodemon tasks.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:3552"
 }
